[package]
name = "fantastic-octo-enigma"
version = "0.1.0"
authors = ["dbregeon <denis.bregeon@digitalbrikes.com>"]

[dependencies]
log= "0.4.8"
env_logger= "0.7.1"
lazy_static = "1.4.0"
socket2 = { version = "0.3.12", features = ["reuseport"] }
specs-derive = "0.4.1"
specs = { version = "0.16.1", features = ["specs-derive"] }
shrev = "1.1.1"
shred = "0.10.2"

[[test]]
name = "cucumber"
path = "tests/cucumber.rs"
harness = false # Allows Cucumber to print output instead of libtest

[dev-dependencies]
cucumber_rust = "0.6.8"
